Не прогрузилось в прошлый раз

--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Шаблон сайта-портфолио, разработанный командой Hæd Exchange для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange."
-    <title></title>
+    <meta name="viewport" content="width=device-width">
 
     <title>Folio — своё портфолио своими руками</title>
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="{page_url}">
-    <meta property="og:title" content="{title}">
-    <meta property="og:description" content="{description}">
-    <meta property="og:image" content="{image_url}">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@SiteTwitter"    >
-    <meta name="twitter:creator" content="@sapegin">
+
+    <meta name="description" content="Шаблон сайта-портфолио, разработанный командой Hæd Exchange для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange."
+    <meta name="keywords" content="content">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://folio.hack.exchange">
+    <meta property="og:title" content="Folio">
+    <meta property="og:description" content="Шаблон сайта-портфолио, разработанный командой Hæd Exchange для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange."
+    <meta property="og:image" content="">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 
     <link rel="stylesheet" href="styleSheets/style.css">
     <link rel="stylesheet" href="styleSheets/social-likes_birman.css">
@@ -26,7 +29,7 @@
 
     <nav class="menubar">
       <div>
-        <a class="logo" href="http://folio.hack.exchange"></a>
+        <a class="logo" href="index.html"></a>
       </div>
     </nav>
 
@@ -37,8 +40,9 @@
             <br>своими руками.</h2>
           <p>Шаблон сайта-портфолио, разработанный
             <br>командой Hæd Exchange для обучения основам
-            <br>веб-вёрстки в рамках образовательного проекта
-            <br>Hack Exchange.</p>
+            <br>веб-вёрстки в рамках образовательного
+            <br class="compact">проекта
+            <br class="full">Hack Exchange.</p>
 
           <figure></figure>
         </section>
@@ -53,7 +57,7 @@
             <br> в одном шаблоне.</h2>
           <p>Шаблон состоит из типовых страниц: о себе,
             <br>портфолио работ, контакты. Кастомизация и
-            <br>дополнения остаются за вами.</p>
+            <br >дополнения остаются за вами.</p>
 
           <figure></figure>
         </section>
@@ -69,8 +73,9 @@
           <h2>Адаптирован под
             <br> все экраны.</h2>
           <p>Шаблон хорошо смотрится на компьютерах,
-            <br>планшетах и смартфонах. Не достаёт только версий
-            <br>для телевизора и часов.</p>
+            <br>планшетах и смартфонах. Не достаёт только
+            <br class="compact"> версий
+            <br class="full">для телевизора и часов.</p>
 
           <figure></figure>
         </section>
@@ -95,10 +100,9 @@
 
         <footer>
             <p> Пожалуйста, поделитесь знаниями с друзьями</p>
-            <div class="social-likes social-likes_single" data-single-title="Поделиться">
-              <div class="facebook" title="Поделиться ссылкой на Фейсбуке">Facebook</div>
-              <div class="twitter" title="Поделиться ссылкой в Твиттере">Twitter</div>
-              <div class="vkontakte" title="Поделиться ссылкой во Вконтакте">Вконтакте</div>
+            <div class="social-likes social-likes_single" data-single-title="Share">
+            	<div class="facebook" title="Share link on Facebook">Facebook</div>
+            	<div class="twitter" title="Share link on Twitter">Twitter</div>
             </div>
         </footer>
 
@@ -106,6 +110,3 @@
     </section>
   </body>
 </html>
-
-<!--
-Пожалуйста, поделитесь знаниями с друзьями -->
