Убрала некоторые комментарии

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="http://folio.hack.exchange">
     <meta property="og:title" content="Folio">
     <meta property="og:description" content="Шаблон сайта-портфолио, разработанный командой Hæd Exchange для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange."
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://github.com/ruby-shuler/HSEDC2016-Folio-Ruby-Shuler/blob/gh-pages/images/share.png">
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="icon" type="image/png" href="favicon.png" />
