--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta name="keywords" content="content">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://folio.hack.exchange">
+    <meta property="og:url" content="https://ruby-shuler.github.io/HSEDC2016-Folio-Ruby-Shuler/">
     <meta property="og:title" content="Folio">
     <meta property="og:description" content="Шаблон сайта-портфолио, разработанный командой Hæd Exchange для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange."
-    <meta property="og:image" content="https://github.com/ruby-shuler/HSEDC2016-Folio-Ruby-Shuler/blob/gh-pages/images/share.png">
+    <meta property="og:image" content="https://ruby-shuler.github.io/HSEDC2016-Folio-Ruby-Shuler/images/share.png">
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="icon" type="image/png" href="favicon.png" />
