--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
     <title>Folio — своё портфолио своими руками</title>
 
-    <meta name="description" content="Шаблон сайта-портфолио, разработанный командой Hæd Exchange для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange."
-    <meta name="keywords" content="content">
+    <meta name="description" content="Шаблон сайта-портфолио, разработанный командой Hæd Exchange для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange.">
+    <meta name="keywords" content="portfolio портфолио работка экзамен">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ruby-shuler.github.io/HSEDC2016-Folio-Ruby-Shuler/">
     <meta property="og:title" content="Folio">
-    <meta property="og:description" content="Шаблон сайта-портфолио, разработанный командой Hæd Exchange для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange."
+    <meta property="og:description" content="Шаблон сайта-портфолио, разработанный командой Hæd Exchange для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange.">
     <meta property="og:image" content="https://ruby-shuler.github.io/HSEDC2016-Folio-Ruby-Shuler/images/share.png">
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
